[package]
name = "ddns-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tencentcloud-sdk-rs = { path = "../tencentcloud-sdk-rs" }
crossbeam-channel = "0.5.6"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
clap = { version = "4.0.27", features = ["derive"] }
toml = "0.5.9"
