[package]
name = "tencentcloud-sdk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.89"
sha2 = "0.10.6"
sha256 = "1.1.1"
tokio = "1.22.0"
