[package]
name = "tencentcloud-sdk-rs"
version = "0.1.0"
edition = "2021"
description = "Tencent Cloud SDK Implementation(base API 3.0) in Rust. Support Tencent Cloud API request,Sign"
keywords = ["Tencent Cloud", "skd", "DDNS", "tencent-cloud"]
categories = ["authentication", "api-bindings"]
repository = "https://github.com/xiaoxin-sky/tencentcloud-sdk-rust/blob/master/tencentcloud-sdk-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
sha256 = "1.1.1"
tokio = "1.22.0"
